# HR-Policy-Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
src/: answer_gen.py  bm25_index.py  chunking.py  embed_store.py  main.py  query_classifier.py  query_translate.py  retrieval.py  safety_guard.py  warmup.py
src/model/: schema.py
src/r2/: execute_for_r2.py  r2_client.py
streamlit/: app.py
