[project]
name = "hr-policy-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.25",
    "llama-parse>=0.6.89",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "chromadb>=0.4.0",
    "instructor>=1.0.0",
    "rank-bm25>=0.2.2",
    "streamlit>=1.30.0",
    "sentence-transformers>=2.2.0",
    "ragas>=0.4.3",
    "gcloud>=0.18.3",
]
